added sqlite database from gorm automigrate, finished connection to database, finished basic functionalities for top up plus transaction history
